compiler/testData/diagnostics/tests/enum/inheritFromEnumEntry.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
enum class E {
    ENTRY
}

class A : E.<!ENUM_ENTRY_AS_TYPE!>ENTRY<!>
